<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".paciente.HomePacienteActivity">

    <Button
        android:id="@+id/btnPersonalInfo"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:onClick="onClick"
        android:text="@string/personal_info"
        android:textAlignment="center"
        app:icon="@drawable/ic_user"
        app:iconGravity="textTop"
        app:iconSize="80dp"
        app:layout_constraintBottom_toTopOf="@+id/btnHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/historial_citas"
        app:icon="@drawable/ic_historial_citas"
        app:iconGravity="textTop"
        app:iconSize="70dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPersonalInfo" />

    <Button
        android:id="@+id/btnPruebasPendientes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pruebas_pdtes"
        app:icon="@drawable/ic_pruebas"
        app:iconGravity="textTop"
        app:iconSize="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btnHistorial" />

    <Button
        android:id="@+id/btnCita"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pedir_cita"
        app:icon="@drawable/ic_cita"
        app:iconGravity="textTop"
        app:iconSize="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTto"
        app:layout_constraintEnd_toStartOf="@+id/btnTto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnTto" />

    <Button
        android:id="@+id/btnTto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/consultar_tto"
        app:icon="@drawable/ic_tto"
        app:iconGravity="textTop"
        app:iconSize="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCita"
        app:layout_constraintTop_toBottomOf="@+id/btnPruebasPendientes" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="197dp" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCita" />
</androidx.constraintlayout.widget.ConstraintLayout>